fix for scroll on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,12 @@
 html, body {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  position: fixed;
 }
 
 ::selection {
@@ -24,8 +30,8 @@ h3 {
 .wrapper {
   background: #9bd8ff;
   color: white;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: table;
 }
 
